force-app/main/default/objects/Email_Subscription__c/Email_Subscription__c.object-meta.xml
<CustomObject>
    <label>Email Subscription</label>
    <nameField>
        <label>Email Subscription Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Suscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>