force-app/main/default/objects/Email_Subscription__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Email Suscriptions</relationshipLabel>
    <relationshipName>Email_Suscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>