force-app/main/default/objects/Email_Subscription__c/fields/Email_Subscription_Catalog_ID__c.field-meta.xml
<CustomField>
    <fullName>Email_Subscription_Catalog_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email Subscription Catalog ID</label>
    <referenceTo>Email_Subscription_Catalog__c</referenceTo>
    <relationshipLabel>Email Suscriptions</relationshipLabel>
    <relationshipName>Email_Suscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>